# qlora-finetune-base

./: .gitignore  README.md  download_model.py  infer.py  merge.py  pyproject.toml  requirements.txt  setup.cfg  slim-requirements.txt  train.py
experiments/: README.md
experiments/configs/: qlora_13b.yaml  qlora_7b.yaml  qlora_custom.yaml
notebooks/: benchmarking.ipynb  exploration.ipynb
scripts/: launch_eval.sh  launch_inference.sh  launch_train.sh  merge_lora_weights.sh
src/qlora_finetune_base/: __init__.py
src/qlora_finetune_base/cli/: __init__.py  evaluate.py  inference.py  merge_lora.py  prepare_data.py  train.py
src/qlora_finetune_base/config/: __init__.py  default.yaml  logging.yaml
src/qlora_finetune_base/evaluation/: __init__.py  evaluator.py  metrics.py
src/qlora_finetune_base/inference/: __init__.py  generate.py
src/qlora_finetune_base/models/: lora_peft.py  model_loader.py  quantization.py
src/qlora_finetune_base/training/: __init__.py  callbacks.py  scheduler.py  trainer.py
src/qlora_finetune_base/utils/: __init__.py  budget.py  logging.py  seed.py
tests/: test_data.py  test_evaluation.py  test_inference.py  test_models.py  test_training.py
