[metadata]
name = qlora-finetune-base
version = 0.1.0
description = A QLoRA fine-tuning pipeline for language models.
author = Your Name
author_email = your.email@example.com
url = https://github.com/yourusername/qlora-finetune-base
license = MIT

[options]
packages = find:
install_requires =
    torch>=1.9.0
    transformers>=4.0.0
    accelerate>=0.5.0
    datasets>=1.0.0
    peft>=0.1.0
    bitsandbytes>=0.35.0
    huggingface_hub>=0.0.12
    tyro>=0.3.0

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    qlora-train = qlora_finetune_base.cli.train:main
    qlora-evaluate = qlora_finetune_base.cli.evaluate:main
    qlora-inference = qlora_finetune_base.cli.inference:main
    qlora-merge-lora = qlora_finetune_base.cli.merge_lora:main
    qlora-prepare-data = qlora_finetune_base.cli.prepare_data:main